--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -43,7 +43,7 @@ a {
   line-height: 10px;
   text-transform: uppercase;
   color: #ffffff;
-  background: #f3b701;
+  background: $main-yellow;
   box-shadow: 0px 3px 20px rgba(243, 182, 3, 0.6);
   border-radius: 68px;
 }
