--- a/app/scss/main-nav.scss
+++ b/app/scss/main-nav.scss
@@ -3,6 +3,7 @@
   top: 90px;
   left: 0;
   right: 0;
+  min-height: 233px;
   z-index: 5;
   background-color: $main-blue;
   border-radius: 20px;
@@ -27,8 +28,8 @@
   @include reset-style;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .main-nav__item {
