--- a/app/scss/menu.scss
+++ b/app/scss/menu.scss
@@ -25,6 +25,7 @@
   @include reset-style;
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -54,8 +55,9 @@
 }
 
 .menu-item__image {
+  margin: 0 auto;
   &--classic {
-    margin-left: 13px;
+    margin-left: 47px;
   }
 }
 
@@ -174,7 +176,6 @@
 .menu-dots {
   position: absolute;
   display: flex;
-  margin-bottom: 50px;
   margin-left: -51px;
   padding: 0;
   top: 110%;
@@ -207,8 +208,12 @@
     background-position: 0 center;
   }
 
+  .menu__inner {
+    min-height: 615px;
+  }
+
   .menu-item {
-    margin: 50px 0;
+    margin: 30px 0;
     padding-top: 23px;
     padding-bottom: 28px;
     width: 220px;
@@ -260,6 +265,10 @@
     }
   }
 
+  .menu-item__image--classic {
+    margin-left: 64px;
+  }
+
   .menu-item__title {
     line-height: 19px;
     color: $card-color;
@@ -299,19 +308,19 @@
   .menu__inner {
     max-width: 1150px;
     margin: 0 auto;
+    margin-bottom: 80px;
   }
 
   .menu__title {
     font-size: 48px;
     line-height: 46px;
     margin-top: 92px;
-    margin-bottom: 70px;
+    margin-bottom: 30px;
   }
 
   .menu-slider {
     max-width: 964px;
     margin: 0 auto;
-    margin-bottom: 136px;
   }
 
   .slick-list {
@@ -397,10 +406,15 @@
   .slick-next {
     display: block;
     font-size: 0;
+    width: 0;
+    height: 0;
+    background-color: transparent;
+    border: transparent;
+    outline: none;
     &:before {
       position: absolute;
       content: "";
-      top: 39%;
+      top: 42%;
       width: 25px;
       height: 42px;
       border: none;
