some fixes + reviews + contacts + footer

--- a/app/scss/menu.scss
+++ b/app/scss/menu.scss
@@ -411,6 +411,7 @@
     background-color: transparent;
     border: transparent;
     outline: none;
+    cursor: pointer;
     &:before {
       position: absolute;
       content: "";
