--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -42,6 +42,9 @@
 .contacts__link {
   line-height: 16px;
   color: #ffffff;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .contacts__btn--way {
@@ -238,6 +241,10 @@
     }
     &--call {
       margin-left: 30px;
+    }
+    &:hover {
+      transform: scale(1.1);
+      transition: 0.5s;
     }
   }
 
