--- a/app/scss/main-nav.scss
+++ b/app/scss/main-nav.scss
@@ -200,11 +200,15 @@
     }
   }
 }
+
 @media (min-width: $desktop-width) {
   .main-nav__item {
     margin-right: 35px;
     &:last-child {
       margin-right: 0;
     }
+  }
+  .main-nav__link:hover {
+    color: #ffffff;
   }
 }
